Lesson 3 final commit

--- a/Lesson3_Highlights/index.html
+++ b/Lesson3_Highlights/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>INSERT YOUR NAME</title>
+    <title>David Klein</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -65,7 +65,7 @@
         <div class="headline">
             <div class="container">
                 <h2>Lesson 3 Highlights</h2>
-                <h3>INSERT YOUR NAME</h3>
+                <h3>David Klein</h3>
             </div>
         </div>
     </header>
@@ -77,55 +77,55 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="topic1">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="http://matthias.vallentin.net/blog/2012/12/octocat.jpeg">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">Version Control</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Version Control is a system that records changes to a file or set of files over time so that you can recall specific versions for later. It allows you to revert files back to a previous state, revert the entire project back to a previous state, compare changes over time, see who last modified something that might cause a problem, who introduced an issue, and so much more. Even if you screw up or lose files, it is easy to recover and revert back to a previous state. Git is an example of a distributed Version Control System. With Git, the user don't receive just a snapshot of the file, they receive a fully mirrored file.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="topic2">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Folder-remote.svg/500px-Folder-remote.svg.png">
             <h2 class="featurette-heading">Highlight #2
-                <span class="text-muted">Topic 2 Header</span>
+                <span class="text-muted">Remote Repositories</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Remote repositories are versions of your project that are hosted on the internet or network somewhere. You can have many repositories which for the most part are read and worked on solely by you. You can also collaborate with others using these remote repositories by pushing and pulling data to and from them when you need to share the work. Managing remote repositories regards knowing how to add remote repositories, remove no longer active repositories, manage numerous remote branches, define the respository as being tracked or not, and so much more.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="topic3">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="http://www.itsmycodeblog.com/images/git.png">
             <h2 class="featurette-heading">Highlight #3
-                <span class="text-muted">Topic 3 Header</span>
+                <span class="text-muted">History of Git</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git was created as the result of a dispute between the community that developed the Linux kernel and the company that provided the developers the DVCS, then called BitKeeper. As a result of the seperation between the two parties, the Linux development community decided to create a DVCS of their own that was based off of the original BitKeeper. The developers of the new system wasnted to focus on 5 specific points in their new system: speed, simplicity, support for non-linear development, full distribution, and the ability to handle large projects. In 2005, Git was born and has since evolved into the premier DVCS to use. </p>
         </div>
         
         <hr class="featurette-divider">
         
        <!-- Fourth Featurette -->
         <div class="featurette" id="topic4">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="https://s3.amazonaws.com/media-p.slid.es/thumbnails/hayd/1dc44d/git.jpg">
             <h2 class="featurette-heading">Highlight #4
-                <span class="text-muted">Topic 4 Header</span>
+                <span class="text-muted">How is Git different?</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">There are many different DVCSs who perform for the most part the same tasks. But how does Git seperate itself from the competition? The major differences between Git and the others is the way Git thinks about its data. Most other systems store information as a list of file-based changes. They think of the information as a set of files and records the changes made to each file over a period of time. Git thinks of its data like a snapshot of a mini filesystem. Every time you give the commit command, it takes a proverbial picture of what your lifes look like and stores a reference to that picture.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Fifth Featurette -->
         <div class="featurette" id="topic5">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="https://s3.amazonaws.com/media-p.slid.es/thumbnails/secure/58bc31/decks.jpg">
             <h2 class="featurette-heading">Highlight #5
-                <span class="text-muted">Topic 5 Header</span>
+                <span class="text-muted">Tracked vs. Untracked</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Each file in the directory can be in one of two states: untracked and tracked. Tracked files are those that were in the snapshot being sent to the remote repository, they can be both modified or unmodified, or they can be staged and prepped to be committed in the next snapshot. untracked is the opposite of tracked. Any files that were not in the last commit or are not in the staging area are untracked. You can use the 'git status' command to see which files are going to be committed next. To begin tracking a new file, use the command 'git add'. After adding the desired file, if you were to do the commit command the file you added will be included in the snapshot.</p>
         </div>
 
         <hr class="featurette-divider">
